# priv/static/swagger.json
@@ -25,22 +25,22 @@
       "description": "A article of the app",
       "example": {
         "content": "content",
+        "created_at": "2022-11-17 05:10:56",
         "id": "162bf201-55c9-4dff-81ec-4ac42288eb1e",
-        "inserted_at": "2022-11-17 05:10:56",
         "link": "https://creditcard.cib.com.cn/promotion/national/",
         "published_at": "2022-11-17 05:10:56",
         "title": "dave",
         "updated_at": "2022-11-17 05:10:56"
       },
       "properties": {
-        "id": {
-          "description": "Article ID",
-          "type": "uuid"
-        },
-        "inserted_at": {
+        "created_at": {
           "description": "Creation timestamp",
           "format": "datetime",
           "type": "string"
+        },
+        "id": {
+          "description": "Article ID",
+          "type": "uuid"
         },
         "title": {
           "description": "Article title",
@@ -62,20 +62,20 @@
       "description": "A bank of the app",
       "example": {
         "crawler_url": "https://creditcard.cib.com.cn/promotion/national/",
+        "created_at": "2022-11-17 05:10:56",
         "id": "162bf201-55c9-4dff-81ec-4ac42288eb1e",
-        "inserted_at": "2022-11-17 05:10:56",
         "name": "dave",
         "updated_at": "2022-11-17 05:10:56"
       },
       "properties": {
-        "id": {
-          "description": "Bank ID",
-          "type": "uuid"
-        },
-        "inserted_at": {
+        "created_at": {
           "description": "Creation timestamp",
           "format": "datetime",
           "type": "string"
+        },
+        "id": {
+          "description": "Bank ID",
+          "type": "uuid"
         },
         "name": {
           "description": "Bank name",
